objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>PSG</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AT - Attendance</fullName>
                </value>
                <value>
                    <fullName>AT - Check-in</fullName>
                </value>
                <value>
                    <fullName>AT - leads</fullName>
                </value>
                <value>
                    <fullName>AT - Travel &amp; Addtional Support</fullName>
                </value>
                <value>
                    <fullName>AT - Universal Lead Capture</fullName>
                </value>
                <value>
                    <fullName>CSN - Competitive Market Ad</fullName>
                </value>
                <value>
                    <fullName>CSN - NewMarket</fullName>
                </value>
                <value>
                    <fullName>CSN - Social Wall</fullName>
                </value>
                <value>
                    <fullName>CSN - Suggested Ad</fullName>
                </value>
                <value>
                    <fullName>CSN - Supplier Bundles</fullName>
                </value>
                <value>
                    <fullName>CSN - Supplier Certification</fullName>
                </value>
                <value>
                    <fullName>CSN - Supplier Feature</fullName>
                </value>
                <value>
                    <fullName>CSN - Supplier Reports</fullName>
                </value>
                <value>
                    <fullName>CSN - Video Ad</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect</fullName>
                </value>
                <value>
                    <fullName>Decision Street</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
                <value>
                    <fullName>EMI - Attendee Hub</fullName>
                </value>
                <value>
                    <fullName>EMI - Elitemeetings.com</fullName>
                </value>
                <value>
                    <fullName>EMI - Elite Meetings Alliance</fullName>
                </value>
                <value>
                    <fullName>EMI - Group Buy</fullName>
                </value>
                <value>
                    <fullName>EMI - Print</fullName>
                </value>
                <value>
                    <fullName>EMI - SpeedRFP.com</fullName>
                </value>
                <value>
                    <fullName>EMI - Tradeshow</fullName>
                </value>
                <value>
                    <fullName>EMI - Whitelabel</fullName>
                </value>
                <value>
                    <fullName>Lead Capture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Configuration_Fee__c</fullName>
        <label>Professional Configuration Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Management_Fee__c</fullName>
        <label>Project Management Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QL_AdditionalDiscount__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__AdditionalDiscountAmount__c</formula>
        <label>QL AdditionalDiscount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QL_Conversion_Rate__c</fullName>
        <formula>SBQQ__QuoteLine__r.Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QL Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QL_Promo_Code__c</fullName>
        <formula>IF(INCLUDES(SBQQ__QuoteLine__r.SBQQ__Quote__r.Promo_Code__c , '2-Pg PMPP Early Bird Ending 05/31'),'2-Pg PMPP Early Bird Ending 05/31, ','') + 
IF(INCLUDES(SBQQ__QuoteLine__r.SBQQ__Quote__r.Promo_Code__c , '2-Pg PMPP Early Bird Ending 08/31'),'2-Pg PMPP Early Bird Ending 08/31, ','') + 
IF(INCLUDES(SBQQ__QuoteLine__r.SBQQ__Quote__r.Promo_Code__c , '2-Pg PMPP Early Bird Ending 10/31'),'2-Pg PMPP Early Bird Ending 10/31, ','') + 
IF(INCLUDES(SBQQ__QuoteLine__r.SBQQ__Quote__r.Promo_Code__c , '1-Pg PMPP Early Bird Ending 05/31'),'1-Pg PMPP Early Bird Ending 05/31, ','') + 
IF(INCLUDES(SBQQ__QuoteLine__r.SBQQ__Quote__r.Promo_Code__c , '1-Pg PMPP Early Bird Ending 08/31'),'1-Pg PMPP Early Bird Ending 08/31, ','') + 
IF(INCLUDES(SBQQ__QuoteLine__r.SBQQ__Quote__r.Promo_Code__c , '1-Pg PMPP Early Bird Ending 10/31'),'1-Pg PMPP Early Bird Ending 10/31, ','') + 
IF(INCLUDES(SBQQ__QuoteLine__r.SBQQ__Quote__r.Promo_Code__c , 'EC Mid-Market Prospect EOY Promotion'),'EC Mid-Market Prospect EOY Promotion','')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QL Promo Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QL_Quantity__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__Quantity__c</formula>
        <label>QL Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QWeighted__c</fullName>
        <formula>Total_Fees__c * Opportunity.Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Total Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Bill_To_Country__c</fullName>
        <formula>Opportunity.SBQQ__PrimaryQuote__r.SBQQ__BillingCountry__c</formula>
        <label>Quote Bill To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rack_Rate__c</fullName>
        <formula>SBQQ__QuoteLine__r.Rack_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rack Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReassignedFromOpportunityId__c</fullName>
        <label>ReassignedFromOpportunityId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <formula>Opportunity.ContractReceived__c</formula>
        <label>Contract Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring_Bookings_Amount__c</fullName>
        <label>Recurring Bookings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_vs_Non_Recurring__c</fullName>
        <label>Recurring vs Non-Recurring</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Australia &amp; Oceania</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Caribbean &amp; Bermuda</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Default/International</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>Middel East</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>US &amp; Canada</fullName>
                </value>
                <value>
                    <fullName>US MidWest</fullName>
                </value>
                <value>
                    <fullName>US NorthEast</fullName>
                </value>
                <value>
                    <fullName>US SouthEast</fullName>
                </value>
                <value>
                    <fullName>US SouthWest</fullName>
                </value>
                <value>
                    <fullName>US West</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regular_Total__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__RegularTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regular Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regular_Unit_Price__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__RegularPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regular Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewable_Non_Renewable__c</fullName>
        <description>This will show whether the Feature-Set is "Renewable/Non-Renewable" for "Event/Survey/CC" Product.</description>
        <label>Renewable/Non-Renewable</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Value__c</fullName>
        <label>Renewal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Fee__c</fullName>
        <label>Reporting Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Team_Code__c</fullName>
        <description>Used in EBS Integration to suffix the SKU codes with Selling Team's code. REQ-0895
7/27/2017: Flipped Product Line to Product Family as per new requirement during CORE Integration testing in DATA Sandbox</description>
        <formula>IF( 
OR(
HC_Product_Group__c = TRUE,
CONTAINS(Product_Family__c, "Passkey"),
AND(
Product_Family__c = 'Social Tables',
OR(PricebookEntry.Product2.ProductCode != 'CV-SW-EC-SCT-SCTPLNLISC',
PricebookEntry.Product2.ProductCode != 'CV-SW-EC-SCT-SCTADDUSRLGN'),
OR(CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, 'CSN'),
CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, 'Social Tables')))), 'HOS',

IF( 
OR(
Product_Family__c = 'Lanyon Mobile',
Product_Family__c = 'SignUp4', 
Product_Family__c = 'Lanyon Events (Conference)',
Product_Family__c = 'Lanyon Meetings',
Product_Family__c = 'RegOnline', 
Product_Family__c = 'Lanyon Travel', 
Product_Family__c = 'Puresend',
Product_Family__c = 'Survey',
Product_Family__c = 'CrowdCompass',
Product_Family__c = 'Social Tables',
Product_Family__c = 'QuickMobile',
PricebookEntry.Product2.ProductCode = 'CV-SW-EC-SCT-SCTPLNLISC',
PricebookEntry.Product2.ProductCode = 'CV-SW-EC-SCT-SCTADDUSRLGN'), 'GEN',
 

 
IF(
OR(
CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, 'Enterprise'),
CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, '(Ent)')), 'ENT',
 
IF(
CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, 'TPP'), 'TPP',
 
IF(
NOT(OR(CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, 'TPP'),
CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, 'Enterprise'))), 'EVE', 

'Not Available' 
)))))

/*



IF( 
OR(
Product_Family__c = 'Lanyon Mobile',
Product_Family__c = 'SignUp4', 
Product_Family__c = 'Lanyon Events (Conference)',
Product_Family__c = 'Lanyon Meetings',
Product_Family__c = 'RegOnline', 
Product_Family__c = 'Lanyon Travel', 
Product_Family__c = 'Puresend',
Product_Family__c = 'Survey',
Product_Family__c = 'CrowdCompass',
Product_Family__c = 'QuickMobile'), 'GEN',
 
IF( 
OR(
HC_Product_Group__c = TRUE,
CONTAINS(Product_Family__c, "Passkey")), 'HOS',
 
IF(
OR(
CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, 'Enterprise'),
CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, '(Ent)')), 'ENT',
 
IF(
CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, 'TPP'), 'TPP',
 
IF(
NOT(OR(CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, 'TPP'),
CONTAINS(Opportunity.Deal_Closed_by__r.UserRole.Name, 'Enterprise'))), 'EVE', 

'Not Available' 
))))) */</formula>
        <inlineHelpText>Used in EBS Integration to suffix the SKU codes with Selling Team's code. REQ-0895.</inlineHelpText>
        <label>Revenue Team Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollup_Price__c</fullName>
        <description>Rollup unit price populated by corresponding field with same field name on quote line.</description>
        <inlineHelpText>Rollup unit price populated by corresponding field with same field name on quote line.</inlineHelpText>
        <label>Rollup Unit Price (EBS)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rollup_Quantity__c</fullName>
        <description>Rollup quantity populated by corresponding field with same field name on quote line.</description>
        <inlineHelpText>Rollup quantity populated by corresponding field with same field name on quote line.</inlineHelpText>
        <label>Rollup Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SaaS_vs_Non_SaaS__c</fullName>
        <label>SaaS vs Non-SaaS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Month__c</fullName>
        <label>Sale Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Rollup_To_EBS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks opportunity product as having a rollup price and/or quantity to be sent to EBS for invoicing. Populated by corresponding quote line.</description>
        <inlineHelpText>Marks opportunity product as having a rollup price and/or quantity to be sent to EBS for invoicing. Populated by corresponding quote line.</inlineHelpText>
        <label>Send Rollup To EBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Should_not_RollUp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should not RollUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Opportunity Stage</description>
        <formula>TEXT (Opportunity.StageName)</formula>
        <inlineHelpText>Opportunity Stage</inlineHelpText>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Feature Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>British Columbia</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District Of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Manitoba</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <label>Subregion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Midwest US</fullName>
                </value>
                <value>
                    <fullName>Northeast US</fullName>
                </value>
                <value>
                    <fullName>Southeast US</fullName>
                </value>
                <value>
                    <fullName>Southwest US</fullName>
                </value>
                <value>
                    <fullName>Western US</fullName>
                </value>
                <value>
                    <fullName>Northern Canada</fullName>
                </value>
                <value>
                    <fullName>Mountains &amp; The West</fullName>
                </value>
                <value>
                    <fullName>The Prairies</fullName>
                </value>
                <value>
                    <fullName>Central Canada</fullName>
                </value>
                <value>
                    <fullName>East Coast</fullName>
                </value>
                <value>
                    <fullName>Carribbean &amp; Bermuda</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Western Europe</fullName>
                </value>
                <value>
                    <fullName>Eastern Europe</fullName>
                </value>
                <value>
                    <fullName>Northern Europe</fullName>
                </value>
                <value>
                    <fullName>North Asia</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Melamesia</fullName>
                </value>
                <value>
                    <fullName>Micronesia</fullName>
                </value>
                <value>
                    <fullName>Polynesia</fullName>
                </value>
                <value>
                    <fullName>Northern Africa</fullName>
                </value>
                <value>
                    <fullName>Southern Africa</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplies_Fee__c</fullName>
        <label>Supplies Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Fee__c</fullName>
        <label>Support Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Minutes_Purchased__c</fullName>
        <label>Support Minutes Purchased</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_ARR__c</fullName>
        <formula>SBQQ__QuoteLine__r.Annual_Recurring_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tickets_Sold__c</fullName>
        <label>Tickets Sold</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice2__c</fullName>
        <formula>IF( Exclude_from_Totals__c = false, DiscountedSalesPrice__c*Quantity, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price (C)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice_Dev__c</fullName>
        <formula>TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalPrice Dev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Decommission_Value_QP__c</fullName>
        <label>Total Decommission Value QP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Rack__c</fullName>
        <formula>Per_Item_Hr_Fee_Rack__c * (of_Items__c+ of_Comp_Items_Hrs__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fees (Rack)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <formula>(Per_Item_Fee__c * of_Items__c)+(License_Fee__c+Equipment_Fee__c+Supplies_Fee__c+Support_Fee__c+Reporting_Fee__c+Professional_Configuration_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Line_Value__c</fullName>
        <label>Total Line Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_Items_Hrs__c</fullName>
        <formula>of_Comp_Items_Hrs__c +  of_Items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # of Items/Hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Expense__c</fullName>
        <label>Travel Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UFR_Unit_Price__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__RenewedSubscription__r.SBQQ__CustomerPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UFR Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UFR_Units__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__RenewedSubscription__r.SBQQ__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UFR Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UFR_Value__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__RenewedSubscription__r.Annual_Recurring_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UFR Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>US_State__c</fullName>
        <label>US State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District Of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uplift_Amount__c</fullName>
        <label>Uplift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upsell_Amount__c</fullName>
        <label>Upsell Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>